syntax = "proto3";

import "Protos/account.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "ApiComparison.GrpcAPI";

package apicomparison;

service Ingredient {
  rpc GetIngredient (Id) returns (IngredientResponseDto);
  rpc GetIngredients (IngredientRequestDto) returns (IngredientListResponseDto);
  rpc PostIngredient (IngredientRequestDto) returns (IngredientResponseDto);
  rpc PutIngredient (IngredientPutRequestDto) returns (google.protobuf.Empty);
  rpc DeleteIngredient (Id) returns (google.protobuf.Empty);
}

message IngredientRequestDto {
  string name = 1;
  string quantity = 2;
  string unit_of_measure = 3;
  string userId = 4;
  repeated string dish_ids = 5;
}

message IngredientPutRequestDto {
  Id id = 1;
  string name = 2;
  string quantity = 3;
  string unit_of_measure = 4;
  string userId = 5;
  repeated string dish_ids = 6;
}

message IngredientResponseDto {
  string id = 1;
  string name = 2;
  string quantity = 3;
  string unit_of_measure = 4;
  repeated DishResponseDto ingredients = 5;
}

message IngredientListResponseDto {
	repeated IngredientResponseDto items = 1;
}


service Dish {
  rpc GetDish (Id) returns (DishResponseDto);
  rpc GetDishes (DishRequestDto) returns (DishListResponseDto);
  rpc PostDish (DishRequestDto) returns (DishResponseDto);
  rpc PutDish (DishPutRequestDto) returns (google.protobuf.Empty);
  rpc DeleteDish (Id) returns (google.protobuf.Empty);
}


message DishRequestDto {
  string name = 1;
  string description = 2;
  string photo_url = 3;
  string userId = 4;
  repeated string ingredient_ids = 5;
}

message DishPutRequestDto {
  Id id = 1;
  string name = 2;
  string description = 3;
  string photo_url = 4;
  string userId = 5;
  repeated string ingredient_ids = 6;
}

message DishResponseDto {
  string id = 1;
  string name = 2;
  string description = 3;
  string photo_url = 4;
  repeated IngredientResponseDto ingredients = 5;
}

message DishListResponseDto {
	repeated DishResponseDto items = 1;
}